[gd_scene load_steps=2 format=3 uid="uid://cxvaqesbktbec"]

[ext_resource type="Script" path="res://Menus/setup_menu.gd" id="1_2rwaq"]

[node name="SetupMenu" type="CanvasLayer"]
script = ExtResource("1_2rwaq")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -209.0
offset_top = 447.0
offset_right = 190.0
offset_bottom = 691.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="Multiplayer" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Multiplayer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="IpAddress" type="LineEdit" parent="TabContainer/Multiplayer"]
layout_mode = 2
placeholder_text = "localhost:22477"
alignment = 1

[node name="JoinServer" type="Button" parent="TabContainer/Multiplayer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Join Server"

[node name="StartGame" type="Button" parent="TabContainer/Multiplayer"]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Start Game"

[node name="HostServer" type="Button" parent="TabContainer/Multiplayer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Host Server"

[node name="CloseServer" type="Button" parent="TabContainer/Multiplayer"]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Close Server"

[node name="LeaveServer" type="Button" parent="TabContainer/Multiplayer"]
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Leave Server"

[node name="ConnStatus" type="Label" parent="TabContainer/Multiplayer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Waiting for opponent..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorSelect" type="HBoxContainer" parent="TabContainer/Multiplayer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="ColorLabel" type="Label" parent="TabContainer/Multiplayer/ColorSelect"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "  Server plays:"
vertical_alignment = 1

[node name="ColorChoice" type="OptionButton" parent="TabContainer/Multiplayer/ColorSelect"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "White"
popup/item_0/id = 0
popup/item_1/text = "Black"
popup/item_1/id = 1

[node name="SinglePlayer" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ColorSelect" type="HBoxContainer" parent="TabContainer/SinglePlayer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
offset_top = 45.0
offset_right = 399.0
offset_bottom = 85.0
alignment = 1

[node name="ColorLabel" type="Label" parent="TabContainer/SinglePlayer/ColorSelect"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "  You play:"
vertical_alignment = 1

[node name="ColorChoice" type="OptionButton" parent="TabContainer/SinglePlayer/ColorSelect"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "White"
popup/item_0/id = 0
popup/item_1/text = "Black"
popup/item_1/id = 1

[node name="StartGame" type="Button" parent="TabContainer/SinglePlayer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -80.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Game"

[connection signal="text_changed" from="TabContainer/Multiplayer/IpAddress" to="." method="_on_ip_address_changed"]
[connection signal="pressed" from="TabContainer/Multiplayer/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="pressed" from="TabContainer/Multiplayer/StartGame" to="." method="_on_start_game_pressed_multiplayer"]
[connection signal="pressed" from="TabContainer/Multiplayer/HostServer" to="." method="_on_host_server_pressed"]
[connection signal="pressed" from="TabContainer/Multiplayer/CloseServer" to="." method="_on_close_server_pressed"]
[connection signal="pressed" from="TabContainer/Multiplayer/LeaveServer" to="." method="_on_leave_server_pressed"]
[connection signal="pressed" from="TabContainer/SinglePlayer/StartGame" to="." method="_on_start_game_pressed_singleplayer"]
